--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-PORT='3000'
-MONGODB_URL='mongodb://localhost:27017/mern-auth'
-NODE_ENV='development'
-JWT_KEY="'secret#@"
+PORT=''
+MONGODB_URL=''
+NODE_ENV=''
+JWT_KEY="'"
 NODE_ENV='development'
